--- a/Exp/CV_Hand_Model/hand_landmarker_ex.ipynb
+++ b/Exp/CV_Hand_Model/hand_landmarker_ex.ipynb
@@ -104,36 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Ivan\\Documents\\CMA\\ML Parkinsons Repository\\Parkinson-Prediagnosis\\Instruct\\CV_Hand_Model\\venv\\lib\\site-packages\\google\\protobuf\\symbol_database.py:55: UserWarning: SymbolDatabase.GetPrototype() is deprecated. Please use message_factory.GetMessageClass() instead. SymbolDatabase.GetPrototype() will be removed soon.\n",
-      "  warnings.warn('SymbolDatabase.GetPrototype() is deprecated. Please '\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing Video...\n",
-      "      Frame  Landmark Index         X         Y             Z\n",
-      "0         0               0  0.218992  0.587607  5.433026e-07\n",
-      "1         0               1  0.419347  0.641397  3.021685e-03\n",
-      "2         0               2  0.588827  0.633957  2.025852e-02\n",
-      "3         0               3  0.726380  0.588316  4.229122e-02\n",
-      "4         0               4  0.827614  0.558464  6.941080e-02\n",
-      "...     ...             ...       ...       ...           ...\n",
-      "9466    450              16  0.357878  0.273194 -1.789764e-01\n",
-      "9467    450              17  0.210730  0.501756 -2.871767e-02\n",
-      "9468    450              18  0.172599  0.432011 -7.362085e-02\n",
-      "9469    450              19  0.144765  0.392057 -1.106491e-01\n",
-      "9470    450              20  0.120486  0.357926 -1.346530e-01\n",
-      "\n",
-      "[9471 rows x 5 columns]\n"
+     "ename": "NameError",
+     "evalue": "name 'python' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdraw_landmarks\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m draw_landmarks_on_image  \u001b[38;5;66;03m# Import the function\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Create a HandLandmarker object\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m base_options \u001b[38;5;241m=\u001b[39m \u001b[43mpython\u001b[49m\u001b[38;5;241m.\u001b[39mBaseOptions(model_asset_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhand_landmarker.task\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      9\u001b[0m options \u001b[38;5;241m=\u001b[39m vision\u001b[38;5;241m.\u001b[39mHandLandmarkerOptions(base_options\u001b[38;5;241m=\u001b[39mbase_options, num_hands\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m     10\u001b[0m detector \u001b[38;5;241m=\u001b[39m vision\u001b[38;5;241m.\u001b[39mHandLandmarker\u001b[38;5;241m.\u001b[39mcreate_from_options(options)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'python' is not defined"
      ]
     }
    ],
@@ -198,8 +180,8 @@
     "cv2.destroyAllWindows()\n",
     "\n",
     "# Create DataFrame\n",
-    "df = pd.DataFrame(landmarks_data)\n",
-    "print(df)\n"
+    " df = pd.DataFrame(landmarks_data)\n",
+    " print(df)\n"
    ]
   },
   {
