--- a/NLP/utils/data_extraction.ipynb
+++ b/NLP/utils/data_extraction.ipynb
@@ -79,30 +79,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Speaker A: Okay, great. Thank you.\n",
-            "Speaker B: Thank you.\n",
-            "Speaker A: I would try the spontaneous dialogue. So I will start with a question. For example, it's my first time in London and could you recommend some place nice places I should visit?\n",
-            "Speaker B: St. James's park in London. And Buckingham palace and. Sorry. Now what other places? Trafalgar Square. Trafalgar Square. And.\n",
-            "Speaker C: Buckingham Palace.\n"
-          ]
-        },
-        {
-          "ename": "KeyError",
-          "evalue": "'Speaker C'",
+          "ename": "NameError",
+          "evalue": "name 'audioTextConversion' is not defined",
           "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[54], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m dialogue \u001b[38;5;241m=\u001b[39m \u001b[43maudioTextConversion\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mNLP/Data/SpontaneousDialogue/HC/ID31_hc_0_1_1.wav\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#df = pd.DataFrame(data = dialogue)\u001b[39;00m\n",
-            "Cell \u001b[0;32mIn[53], line 24\u001b[0m, in \u001b[0;36maudioTextConversion\u001b[0;34m(audioPath)\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSpeaker \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mutterance\u001b[38;5;241m.\u001b[39mspeaker\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mutterance\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m     speaker \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSpeaker \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mutterance\u001b[38;5;241m.\u001b[39mspeaker\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 24\u001b[0m     \u001b[43mdialogue\u001b[49m\u001b[43m[\u001b[49m\u001b[43mspeaker\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mappend(utterance\u001b[38;5;241m.\u001b[39mtext)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m speaker_differentiation(dialogue)\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'Speaker C'"
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m dialogue \u001b[38;5;241m=\u001b[39m \u001b[43maudioTextConversion\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNLP/Data/SpontaneousDialogue/HC/ID00_hc_0_0_0.wav\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#df = pd.DataFrame(data = dialogue)\u001b[39;00m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'audioTextConversion' is not defined"
           ]
         }
       ],
@@ -357,6 +345,35 @@
         "df = pd.concat([df,df1], axis=0)\n",
         "df.to_csv('NLP/Data/SpontaneousDialogue/PD_Data.csv',index=False)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Indexes Extraction"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import re\n",
+        "\n",
+        "def add_index_(input_string):\n",
+        "    match = re.search(r'(\\d+)_(\\d+)_(\\d+)', input_string)\n",
+        "\n",
+        "    if match:\n",
+        "        numbers = match.groups()  # Returns a tuple of the numbers as strings\n",
+        "        return numbers\n",
+        "    else:\n",
+        "        return None, None, None\n",
+        "    \n",
+        "all_data = pd.read_csv('NLP/Data/SpontaneousDialogue/All_Data_1Dup.csv')\n",
+        "all_data[['H&Y','UPDRS II-5','UPDRS III-18']] = all_data['Audio path'].apply(add_index_).apply(pd.Series)\n",
+        "all_data.to_csv('NLP/Data/SpontaneousDialogue/All_Data_IndexesIncluded.csv')\n"
+      ]
     }
   ],
   "metadata": {
@@ -371,7 +388,8 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
