--- a/NLP/data_analysis.ipynb
+++ b/NLP/data_analysis.ipynb
@@ -1129,6 +1129,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Notes:\n",
+    "    * Tree based algorithms are more accurate when dataset size is small."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Predicting indexes"
    ]
   },
