--- a/CV_Hand_Model/NOTEBOOKS/Experimental.ipynb
+++ b/CV_Hand_Model/NOTEBOOKS/Experimental.ipynb
@@ -413,6 +413,77 @@
     "# Show the plot\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CNN-LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Conv1D, MaxPooling1D, Dropout, Flatten, LSTM, Dense"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'timesteps' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m Sequential()\n\u001b[0;32m----> 3\u001b[0m model\u001b[38;5;241m.\u001b[39madd(Conv1D(filters\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m64\u001b[39m, kernel_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m, activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelu\u001b[39m\u001b[38;5;124m'\u001b[39m, input_shape\u001b[38;5;241m=\u001b[39m(\u001b[43mtimesteps\u001b[49m, features)))\n\u001b[1;32m      4\u001b[0m model\u001b[38;5;241m.\u001b[39madd(Dropout(\u001b[38;5;241m0.5\u001b[39m))\n\u001b[1;32m      5\u001b[0m model\u001b[38;5;241m.\u001b[39madd(MaxPooling1D(pool_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'timesteps' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "timesteps = 20\n",
+    "features = 4\n",
+    "\n",
+    "model = Sequential()\n",
+    "\n",
+    "model.add(Conv1D(filters=64, kernel_size=3, activation='relu', input_shape=(timesteps, features)))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(MaxPooling1D(pool_size=2))\n",
+    "\n",
+    "model.add(Conv1D(filters=64, kernel_size=3, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(MaxPooling1D(pool_size=2))\n",
+    "\n",
+    "model.add(Flatten())\n",
+    "\n",
+    "model.add(LSTM(50, activation='relu', return_sequences=True))\n",
+    "model.add(Dropout(0.5))\n",
+    "\n",
+    "\n",
+    "model.add(Dense(50, activation='relu'))\n",
+    "model.add(Dense(10, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))  # For binary classification (Tremor/Non-Tremor)\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(X_train, y_train, epochs=10, batch_size=32, validation_data=(X_val, y_val))"
+   ]
   }
  ],
  "metadata": {
