--- a/CV_Hand_Model/NOTEBOOKS/Experimental.ipynb
+++ b/CV_Hand_Model/NOTEBOOKS/Experimental.ipynb
@@ -471,7 +471,7 @@
     "\n",
     "model.add(Dense(50, activation='relu'))\n",
     "model.add(Dense(10, activation='relu'))\n",
-    "model.add(Dense(1, activation='sigmoid'))  # For binary classification (Tremor/Non-Tremor)\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
     "\n",
     "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])"
    ]
