updated the cnn lstm model trainign

--- a/CV_Hand_Model/NOTEBOOKS/Experimental.ipynb
+++ b/CV_Hand_Model/NOTEBOOKS/Experimental.ipynb
@@ -484,6 +484,149 @@
    "source": [
     "model.fit(X_train, y_train, epochs=10, batch_size=32, validation_data=(X_val, y_val))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dense, Dropout\n",
+    "import tensorflow as tf\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def Load_Directory_Data(positiveDirectory, negativeDirectory):\n",
+    "    all_data = []\n",
+    "\n",
+    "    for file in Path(positiveDirectory).glob('*.csv'):\n",
+    "        df = pd.read_csv(file)\n",
+    "        df['patient_id'] = file.stem\n",
+    "        df['label'] = 1\n",
+    "        all_data.append(df)\n",
+    "\n",
+    "    for file in Path(negativeDirectory).glob('*.csv'):\n",
+    "        df = pd.read_csv(file)\n",
+    "        df['patient_id'] = file.stem\n",
+    "        df['label'] = 0\n",
+    "        all_data.append(df)\n",
+    "\n",
+    "    combinedDF = pd.concat(all_data, ignore_index=True)\n",
+    "    return combinedDF\n",
+    "\n",
+    "def Prepare_Sequence_By_Patient(df, sequence_length = 30):\n",
+    "    sequences=[]\n",
+    "    labels=[]\n",
+    "    patient_ids=[]\n",
+    "\n",
+    "    for patient_id in df['patient_id'].unique():\n",
+    "        patient_data = df[df['patient_id'] == patient_id]\n",
+    "\n",
+    "    df_pivoted = patient_data.pivot_table(\n",
+    "            index='Frame',\n",
+    "            columns='Landmark Index',\n",
+    "            values=['X', 'Y', 'Z']\n",
+    "        ).reset_index()\n",
+    "\n",
+    "    df_pivoted.columns = [f'landmark_{col[1]}_{col[0]}'.lower() if isinstance(col, tuple) \n",
+    "                            else 'frame' for col in df_pivoted.columns]\n",
+    "\n",
+    "    for i in range(len(df_pivoted) - sequence_length):\n",
+    "            sequences.append(df_pivoted.iloc[i:i + sequence_length].values)\n",
+    "            labels.append(patient_data['label'].iloc[0])  # Use the patient's label\n",
+    "            patient_ids.append(patient_id)\n",
+    "\n",
+    "    return np.array(sequences), np.array(labels), patient_ids\n",
+    "\n",
+    "def create_model(input_shape):\n",
+    "    \"\"\"\n",
+    "    Create LSTM model for Parkinson's prediction\n",
+    "    \"\"\"\n",
+    "    model = Sequential([\n",
+    "        LSTM(128, return_sequences=True, input_shape=input_shape),\n",
+    "        Dropout(0.3),\n",
+    "        LSTM(64, return_sequences=True),\n",
+    "        Dropout(0.3),\n",
+    "        LSTM(32),\n",
+    "        Dropout(0.3),\n",
+    "        Dense(16, activation='relu'),\n",
+    "        Dense(1, activation='sigmoid')  # Binary classification\n",
+    "    ])\n",
+    "    \n",
+    "    model.compile(\n",
+    "        optimizer='adam',\n",
+    "        loss='binary_crossentropy',\n",
+    "        metrics=['accuracy', tf.keras.metrics.AUC()]\n",
+    "    )\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "def train_parkinsons_model(positiveDirectory, negativeDirectory,sequence_length = 30,epochs=50):\n",
+    "    print(f\"Loading data from directories...\")\n",
+    "    combinedDataframe = Load_Directory_Data(positiveDirectory, negativeDirectory)\n",
+    "\n",
+    "    print(f\"Preparing sequences for LSTM...\")\n",
+    "    sequences, labels, patient_ids = Prepare_Sequence_By_Patient(combinedDataframe, sequence_length)\n",
+    "    \n",
+    "    print(f\"Splitting data for train test split\")\n",
+    "    unique_patients = np.unique(patient_ids)\n",
+    "    train_patients, test_patients = train_test_split(unique_patients, test_size=0.2, random_state=42)\n",
+    "\n",
+    "    train_mask = np.isin(patient_ids, train_patients)\n",
+    "    X_train = sequences[train_mask]\n",
+    "    y_train = labels[train_mask]\n",
+    "    X_test = sequences[~train_mask]\n",
+    "    y_test = labels[~train_mask]\n",
+    "\n",
+    "    print(f\"Normalizing data...\")\n",
+    "    X_train_reshape = X_train.reshape(-1, X_train.shape[-1])\n",
+    "    X_test_reshape = X_test.reshape(-1, X_test.shape[-1])\n",
+    "    \n",
+    "    scalar = MinMaxScaler()\n",
+    "    X_train_scaled = scalar.fit_transform(X_train_reshape)\n",
+    "    X_test_scaled = scalar.fit_transform(X_test_reshape)\n",
+    "\n",
+    "    X_train = X_train_scaled.reshape(X_train.shape)\n",
+    "    X_test = X_test_scaled.reshape(X_test.shape)\n",
+    "\n",
+    "    print(f\"Training model...\")\n",
+    "    input_shape = (X_train.shape[1], X_train.shape[2])\n",
+    "    model = create_model(input_shape)\n",
+    "\n",
+    "    history = model.fit(X_train,y_train, validation_data = (X_test, y_test), epochs = epochs, batch_size=32, verbose=1)\n",
+    "\n",
+    "    return model, history, scalar\n",
+    "\n",
+    "def evaluate_patient(model, scaler, patient_data, sequence_length=30):\n",
+    "    \"\"\"\n",
+    "    Evaluate a single patient's data\n",
+    "    \"\"\"\n",
+    "    # Prepare patient data\n",
+    "    sequences, _, _ = prepare_sequences_by_patient(\n",
+    "        patient_data.assign(patient_id='test', label=0),\n",
+    "        sequence_length\n",
+    "    )\n",
+    "    \n",
+    "    # Normalize data using the same scaler\n",
+    "    sequences_reshaped = sequences.reshape(-1, sequences.shape[-1])\n",
+    "    sequences_scaled = scaler.transform(sequences_reshaped)\n",
+    "    sequences_normalized = sequences_scaled.reshape(sequences.shape)\n",
+    "    \n",
+    "    # Make predictions\n",
+    "    predictions = model.predict(sequences_normalized)\n",
+    "    \n",
+    "    # Return average prediction probability\n",
+    "    return np.mean(predictions)\n",
+    "\n",
+    "posPath = \"../handModel_data/POSITIVE\"\n",
+    "negPath = \"../handModel_data/NEGATIVE\"\n",
+    "\n",
+    "model, history, scalar = train_parkinsons_model(posPath, negPath)\n"
+   ]
   }
  ],
  "metadata": {
