--- a/Exp/CV_Hand_Model/NOTEBOOKS/Experimental.ipynb
+++ b/Exp/CV_Hand_Model/NOTEBOOKS/Experimental.ipynb
@@ -645,7 +645,7 @@
     "posPath = \"../handModel_data/POSITIVE\"\n",
     "negPath = \"../handModel_data/NEGATIVE\"\n",
     "\n",
-    "model, history, scalar = train_parkinsons_model(posPath, negPath)\n"
+    "model, history, scalar = train_parkinsons_model(posPath, negPath)"
    ]
   }
  ],
