--- a/NLP/data_analysis-jitterShimmer.ipynb
+++ b/NLP/data_analysis-jitterShimmer.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "[5875 rows x 15 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,12 +597,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Gradient Boosting Machine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean squared error (MSE) on test set: 54.0890\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import datasets, ensemble\n",
+    "from sklearn.inspection import permutation_importance\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.utils.fixes import parse_version\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_columns = df_jitterShimmer.columns[2:].values\n",
+    "X = df_jitterShimmer[X_columns]\n",
+    "y_columns = df_jitterShimmer.columns[0:2].values\n",
+    "y = df_jitterShimmer[y_columns]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y.iloc[:,0],test_size=0.1, random_state=42)\n",
+    "\n",
+    "params = {\n",
+    "    \"n_estimators\": 500,\n",
+    "    \"max_depth\": 4,\n",
+    "    \"min_samples_split\": 5,\n",
+    "    \"learning_rate\": 0.01,\n",
+    "    \"loss\": \"squared_error\",\n",
+    "}\n",
+    "\n",
+    "reg = ensemble.GradientBoostingRegressor(**params)\n",
+    "reg.fit(X_train, y_train)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, reg.predict(X_test))\n",
+    "print(\"The mean squared error (MSE) on test set: {:.4f}\".format(mse))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Detecting Jitter and Shimmer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,12 +671,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def measurePitch(voiceID, f0min, f0max, unit):\n",
-    "    sound = parselmouth.Sound(voiceID) # read the sound\n",
+    "def measurePitch(voice_path, f0min, f0max, unit):\n",
+    "    sound = parselmouth.Sound(voice_path) # read the sound\n",
     "    duration = call(sound, \"Get total duration\") # duration\n",
     "    pitch = call(sound, \"To Pitch\", 0.0, f0min, f0max) #create a praat pitch object\n",
     "    meanF0 = call(pitch, \"Get mean\", 0, 0, unit) # get mean pitch\n",
@@ -654,6 +704,24 @@
    "metadata": {},
    "source": [
     "* SEPERATE NOTEBOOK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(189.3842857142857, 125.62767715552657, 20.187938499999984, 13.938220534798528, 0.01907331583574744, 0.00015217809999665846, 0.007885883396990711, 0.00862825575349703, 0.023657650190972133, 0.0915819477340247, 0.8461335965456067, 0.034500930621930014, 0.048101458651420556, 0.08407929678964655, 0.10350279186579003)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_value = measurePitch('/Users/hanliyang/Documents/GitHub/Parkinson-Prediagnosis/NLP/Data/SpontaneousDialogue/PD/ID02_pd_2_0_0.wav', 75, 300, 'Hertz')\n",
+    "print(X_value)"
    ]
   }
  ],
