multiple values prediction- body motion

--- a/Computer Vision/Data_Analysis.ipynb
+++ b/Computer Vision/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,17 +748,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "var_input = ['std', 'FoG Ratio', 'UPDRS-II']\n",
-    "var_predict = ['TUG dual-task time'] \n",
+    "var_predict = ['FoG Ratio','UPDRS-II','UPDRS-III','PIGD Score','Dyskinesia Score','MiniBestTest Score','TUG time','TUG dual-task time'] \n",
     "\n",
     "df_ml = df_allStats_noOutlier_core[var_input + var_predict]\n",
     "\n",
     "X = df_ml[[var_input[0]]]\n",
-    "y = df_ml[[var_predict[0]]]\n",
+    "y = df_ml[var_predict]\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2, random_state=42)"
    ]
@@ -2198,6 +2198,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/300\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Dimensions must be equal, but are 10 and 8 for '{{node compile_loss/mean_squared_error/sub}} = Sub[T=DT_FLOAT](data_1, sequential_1_1/dense_1/Add)' with input shapes: [?,10], [?,8].",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m model\u001b[38;5;241m.\u001b[39mcompile(optimizer \u001b[38;5;241m=\u001b[39m Adam(learning_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.01\u001b[39m), loss\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmean_squared_error\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Train the model\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m history \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m300\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m#TODO: Change epoch for less loss\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# Predict values and accuracy\u001b[39;00m\n\u001b[1;32m     19\u001b[0m y_prediction \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(X_test)\n",
+      "File \u001b[0;32m~/Documents/GitHub/Parkinson-Prediagnosis/venv/lib/python3.10/site-packages/keras/src/utils/traceback_utils.py:122\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    119\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m    120\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m    121\u001b[0m     \u001b[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m--> 122\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    124\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m~/Documents/GitHub/Parkinson-Prediagnosis/venv/lib/python3.10/site-packages/keras/src/losses/losses.py:1286\u001b[0m, in \u001b[0;36mmean_squared_error\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m   1284\u001b[0m y_true \u001b[38;5;241m=\u001b[39m ops\u001b[38;5;241m.\u001b[39mconvert_to_tensor(y_true, dtype\u001b[38;5;241m=\u001b[39my_pred\u001b[38;5;241m.\u001b[39mdtype)\n\u001b[1;32m   1285\u001b[0m y_true, y_pred \u001b[38;5;241m=\u001b[39m squeeze_or_expand_to_same_rank(y_true, y_pred)\n\u001b[0;32m-> 1286\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m ops\u001b[38;5;241m.\u001b[39mmean(ops\u001b[38;5;241m.\u001b[39msquare(\u001b[43my_true\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my_pred\u001b[49m), axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: Dimensions must be equal, but are 10 and 8 for '{{node compile_loss/mean_squared_error/sub}} = Sub[T=DT_FLOAT](data_1, sequential_1_1/dense_1/Add)' with input shapes: [?,10], [?,8]."
+     ]
+    }
+   ],
+   "source": [
+    "# predicting multiple values\n",
+    "model = Sequential()\n",
+    "\n",
+    "model.add(Dense(256, input_dim = X_train.shape[1], activation = 'relu', name = 'input_layer'))\n",
+    "model.add(Dense(128, activation = 'relu', name = 'hidden_layer_1'))\n",
+    "model.add(Dense(64, activation = 'relu', name = 'hidden_layer_2'))\n",
+    "model.add(Dense(32, activation = 'relu', name = 'hidden_layer_3'))\n",
+    "model.add(Dense(8)) # Output layer for regression\n",
+    "\n",
+    "tf.debugging.set_log_device_placement(True)\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer = Adam(learning_rate=0.01), loss= 'mean_squared_error')\n",
+    "\n",
+    "# Train the model\n",
+    "history = model.fit(X_train, y_train, epochs = 300, batch_size = 32, verbose = 2) #TODO: Change epoch for less loss\n",
+    "\n",
+    "# Predict values and accuracy\n",
+    "y_prediction = model.predict(X_test)\n",
+    "mseNN = mean_squared_error(y_test, y_prediction)\n",
+    "print(f\"NN MSE: {mseNN}\")\n",
+    "\n",
+    "model_name = f'CV_NN_model_5l_multiValue.h5'\n",
+    "model_folder_path = os.path.join('Computer Vision/models',model_name)\n",
+    "model.save(model_folder_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -2862,6 +2916,49 @@
     "model_name = f'CV_NN_model_5l.h5'\n",
     "model_folder_path = os.path.join('Computer Vision/models',model_name)\n",
     "model.save(model_folder_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 46ms/step\n",
+      "[[19.206345]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = load_model('Computer Vision/models/CV_NN_model_5l.h5')\n",
+    "\n",
+    "#mean_fog = X_train['FoG Ratio'].mean()\n",
+    "#mean_updrsii = X_train['UPDRS-II'].mean()\n",
+    "\n",
+    "# Example new data\n",
+    "# Ensure that the new data matches the feature structure used during training\n",
+    "new_data = pd.DataFrame({\n",
+    "    'std': [89.09927456980056],  # Replace with actual value\n",
+    "    #'FoG Ratio': [mean_fog],  # Replace with actual value\n",
+    "    #'UPDRS-II': [mean_updrsii]  # Replace with actual value\n",
+    "})\n",
+    "\n",
+    "# Prepare the input for prediction\n",
+    "new_input = new_data.values  # Convert DataFrame to numpy array\n",
+    "\n",
+    "# Make predictions\n",
+    "predictions = model.predict(new_input)\n",
+    "print(predictions)"
    ]
   },
   {
