--- a/Computer Vision/Data_Analysis.ipynb
+++ b/Computer Vision/Data_Analysis.ipynb
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
     "X = df_ml[[var_input[0]]]\n",
     "y = df_ml[var_predict]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2, random_state=42)\n"
    ]
   },
   {
@@ -2198,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2230,7 +2230,7 @@
     "model.add(Dense(128, activation = 'relu', name = 'hidden_layer_1'))\n",
     "model.add(Dense(64, activation = 'relu', name = 'hidden_layer_2'))\n",
     "model.add(Dense(32, activation = 'relu', name = 'hidden_layer_3'))\n",
-    "model.add(Dense(8)) # Output layer for regression\n",
+    "model.add(Dense(1)) # Output layer for regression\n",
     "\n",
     "tf.debugging.set_log_device_placement(True)\n",
     "\n",
